Close button on Time line header and the conversation member list view changed and operation-ready CSS fixes for alignment on the agenda item in timeline

--- a/app/react/components/AgendaItemInTimeline/index.css
+++ b/app/react/components/AgendaItemInTimeline/index.css
@@ -1,8 +1,7 @@
 .root {
-  composes: hover-container from '../../styles/modules/hover.css';
-  width: 100%;
   position: relative;
-  padding: 5px 40px 5px 0px;
+  margin: 5px 40px 5px 0px;
+  padding: 5px 0px;
   color : #89949E;
 }
 
@@ -21,6 +20,7 @@
 }
 
 .content-container {
+  composes: hover-container from '../../styles/modules/hover.css';
   display: table-cell;
   width: 100%;
   padding: 15px;
@@ -35,7 +35,7 @@
 .status-container {
   position: absolute;
   top: 10px;
-  right: 45px;
+  right: 10px;
 }
 
 .time-container {
