--- a/app/react/components/DeliverableInTimeline/index.css
+++ b/app/react/components/DeliverableInTimeline/index.css
@@ -1,8 +1,8 @@
 .root {
   composes: hover-container from '../../styles/modules/hover.css';
-  width: 100%;
   position: relative;
-  padding: 5px 40px 5px 0px;
+  margin: 5px 40px 5px 0px;
+  padding: 5px 0px;
 }
 
 .user-container {
